--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,18 @@
+#carosel-home-desk {
+  display: block;
+  .owl-nav .owl-prev {
+    left: 29px;
+  }
+  .owl-nav .owl-next {
+    right: 10px;
+  }
+}
+
+#carosel-home-mob {
+  display: none;
+}
+
+
 .pb-feature-section {
 	margin-top: 50px;
   box-shadow: 0 2px 4px 0 #052f5f0a, 0 12px 16px 0 #bae8cf99;
@@ -92,5 +107,15 @@
 .card-text {
   p {
     font-size: 16px;
+  }
+}
+
+@media(max-width: 575px) {
+  #carosel-home-desk {
+    display: none;
+  }
+
+  #carosel-home-mob {
+    display: block;
   }
 }
