--- a/app/views/home/emi_calculator.html.erb
+++ b/app/views/home/emi_calculator.html.erb
@@ -23,8 +23,8 @@
   </div>
 </section>
 <section class="personal-loan-section custom-container">
-  <div class="container">
-    <div class="row">
+  <div class="container p-container">
+    <div class="row row1">
       <div class="col-md-6">
         Loan Amount (₹): <input type="number" class="form-control loanAmount" value="1">
         <input type="range" min="1" max="100000" value="100" class="slider sldLoanAmount">
@@ -35,7 +35,7 @@
         Loan Tenure (years): <input type="number" class="form-control loanTen" value="1">
         <input type="range" min="1" max="500" value="1" class="slider sldLoanTen">
         <hr class="emi-calc">
-        <div class="row">
+        <div class="row row2">
           <div class="col-md-6">
             <label>Monthly EMI</label><br>
             <span class="mon-emi"></span>
@@ -45,7 +45,7 @@
             <span class="pri-amt"></span>
           </div>
         </div>
-        <div class="row">
+        <div class="row row2">
           <div class="col-md-6">
             <label>Total Interest</label><br>
             <span class="tot-int"></span>
