--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -108,7 +108,7 @@
             </div>
           </nav>
           <%if request.path == "/"%>          
-            <nav role="navigation" aria-labelledby="block-quicklinksmenu-menu" id="block-quicklinksmenu" class="quicklinks-menu">
+            <!-- <nav role="navigation" aria-labelledby="block-quicklinksmenu-menu" id="block-quicklinksmenu" class="quicklinks-menu">
               <div class="inner-wrapper">
                 <h2 class="sr-only" id="block-quicklinksmenu-menu">Quicklinks menu</h2>
                 <ul class="menu nav">
@@ -210,7 +210,7 @@
                   </div>
                 </div>
               </div>
-            </div>
+            </div> -->
           <%end%>
         </div>
         <div class="header_shadow"></div>
