--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -1,3 +1,17 @@
+.profile-container {
+  margin: 0 auto;
+  table {
+    td {
+      border-top: 0px;
+      font-size: 17px;
+    }
+  }
+  .default-img {
+    width: 25%;
+    box-shadow: 2px 2px 4px 2px #052f5f0a, 0 12px 16px 0 #bae8cf99;
+    border-radius: 5%;
+  }
+}
 .personal-loan-section {
   .row1 {
     padding: 50px;
